fix alert bug by using relative position and z-index

--- a/assets/stylesheets/oceany.css
+++ b/assets/stylesheets/oceany.css
@@ -50,6 +50,8 @@ body {
  */
 .alert {
     margin-bottom: 0;
+    position:relative;
+    z-index: 1;
 }
 
 /*
